Fix for text inputs not spanning to container width on mobile.

--- a/src/sass/components/_friends.scss
+++ b/src/sass/components/_friends.scss
@@ -3,6 +3,10 @@
   margin-bottom: 20px;
 }
 
+.invite-inputs .input-group {
+  width: 100%;
+}
+
 .close-on-right {
   position: absolute;
   top: 2rem;
